--- a/index.html
+++ b/index.html
@@ -3,27 +3,39 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>MSbombas.cl - Catálogo Interactivo</title>
+  <title>MSbombas.cl - Curvas de Bombas</title>
   <link rel="icon" type="image/x-icon" href="img/favicon.ico">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <style>
     body {
-      font-family: Arial, sans-serif;
+      font-family: 'Inter', sans-serif;
       margin: 0;
       background-color: #ffffff;
-      color: #333;
+      color: #0a2540;
       text-align: center;
     }
 
     header {
-      background-color: #004080;
+      background: linear-gradient(90deg, #0a2540 0%, #35b276 100%);
       color: white;
-      padding: 1rem;
+      padding: 2rem 1rem;
+      text-align: center;
+      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.15);
     }
 
-    h1 {
+    header h1 {
       margin: 0;
-      font-size: 2rem;
+      font-size: 2.8rem;
+      font-weight: 700;
+      color: #ffffff;
+    }
+
+    header h2 {
+      margin: 0.3rem 0 0 0;
+      font-size: 1.4rem;
+      font-weight: 400;
+      color: #f0f0f0;
     }
 
     .selector-container {
@@ -31,14 +43,21 @@
       flex-wrap: wrap;
       justify-content: center;
       gap: 1rem;
-      margin: 20px 0;
+      margin: 25px 0;
     }
 
     select {
-      padding: 0.5rem;
+      padding: 0.6rem;
       border: 1px solid #ccc;
       border-radius: 6px;
       font-size: 1rem;
+      background-color: #f8f9fb;
+      transition: all 0.2s ease-in-out;
+    }
+
+    select:hover {
+      border-color: #35b276;
+      box-shadow: 0 0 4px rgba(53, 178, 118, 0.4);
     }
 
     #imagen-bomba {
@@ -47,34 +66,55 @@
       display: block;
     }
 
+    .descripcion-modelo {
+      font-size: 1rem;
+      color: #333;
+      margin-bottom: 20px;
+    }
+
+    .grafico-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+      gap: 20px;
+      justify-items: center;
+      padding: 0 20px;
+    }
+
     canvas {
-      max-width: 700px;
-      margin: 20px auto;
-      display: block;
-      background: #f8f8f8;
+      background: #f8f9fb;
       border-radius: 12px;
       padding: 10px;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+      box-shadow: 0 3px 8px rgba(0,0,0,0.1);
+      width: 100%;
+      max-width: 600px;
+      height: 320px;
     }
 
     .nota {
-      color: red;
-      font-weight: bold;
+      color: #d80000;
+      font-weight: 600;
       margin: 20px auto;
+      background: #fff5f5;
+      border-radius: 8px;
+      padding: 10px;
+      width: 90%;
+      max-width: 700px;
     }
 
     footer {
-      background-color: #f2f2f2;
-      color: #555;
-      padding: 10px;
+      background-color: #0a2540;
+      color: #ffffff;
+      padding: 15px;
       font-size: 0.9rem;
+      margin-top: 30px;
     }
   </style>
 </head>
 
 <body>
   <header>
-    <h1>MSbombas.cl - Catálogo de Bombas</h1>
+    <h1>MSbombas.cl</h1>
+    <h2>Curvas de Bombas</h2>
   </header>
 
   <div class="selector-container">
@@ -87,7 +127,7 @@
     </select>
 
     <select id="diametroSelect" disabled>
-      <option value="">Seleccione Diámetro de Impulsor</option>
+      <option value="">Seleccione Diámetro</option>
     </select>
 
     <select id="rpmSelect" style="display:none;">
@@ -97,112 +137,132 @@
   </div>
 
   <img id="imagen-bomba" src="" alt="Imagen de bomba">
+  <p id="descripcion-modelo" class="descripcion-modelo"></p>
 
-  <canvas id="graficoAltura"></canvas>
-  <canvas id="graficoPotencia"></canvas>
-  <canvas id="graficoNPSH"></canvas>
-  <canvas id="graficoEficiencia"></canvas>
+  <div class="grafico-grid">
+    <canvas id="graficoAltura"></canvas>
+    <canvas id="graficoPotencia"></canvas>
+    <canvas id="graficoNPSH"></canvas>
+    <canvas id="graficoEficiencia"></canvas>
+  </div>
 
   <p class="nota">
     ⚠️ Muy Importante: Si el motor es a combustión (diésel o bencinero), la potencia debe aumentarse en un 25%.
   </p>
   <script>
     let data;
-    let chartAltura, chartPotencia, chartNPSH, chartEficiencia;
+    let charts = {};
 
     async function cargarDatos() {
-      const response = await fetch('bombas.json');
-      data = await response.json();
-      inicializarSelectores();
+      try {
+        const response = await fetch("bombas.json");
+        data = await response.json();
+        inicializarSelectores();
+      } catch (error) {
+        console.error("Error cargando bombas.json", error);
+      }
     }
 
     function inicializarSelectores() {
-      const serieSelect = document.getElementById('serieSelect');
+      const serieSelect = document.getElementById("serieSelect");
       data.series.forEach(serie => {
-        const opt = document.createElement('option');
+        const opt = document.createElement("option");
         opt.value = serie.nombre;
         opt.textContent = serie.nombre;
         serieSelect.appendChild(opt);
       });
 
-      serieSelect.addEventListener('change', actualizarModelos);
-      document.getElementById('modeloSelect').addEventListener('change', actualizarDiametros);
-      document.getElementById('diametroSelect').addEventListener('change', actualizarGraficos);
-      document.getElementById('rpmSelect').addEventListener('change', actualizarGraficos);
+      serieSelect.addEventListener("change", actualizarModelos);
+      document.getElementById("modeloSelect").addEventListener("change", actualizarDiametros);
+      document.getElementById("diametroSelect").addEventListener("change", actualizarGraficos);
+      document.getElementById("rpmSelect").addEventListener("change", actualizarGraficos);
     }
 
     function actualizarModelos() {
-      const serieNombre = document.getElementById('serieSelect').value;
+      const serieNombre = document.getElementById("serieSelect").value;
       const serie = data.series.find(s => s.nombre === serieNombre);
-      const modeloSelect = document.getElementById('modeloSelect');
-      const img = document.getElementById('imagen-bomba');
+      const modeloSelect = document.getElementById("modeloSelect");
+      const img = document.getElementById("imagen-bomba");
+      const descripcion = document.getElementById("descripcion-modelo");
+
       modeloSelect.innerHTML = '<option value="">Seleccione Modelo</option>';
+      descripcion.textContent = "";
+      img.src = "";
 
       if (!serie) return;
       serie.modelos.forEach(modelo => {
-        const opt = document.createElement('option');
+        const opt = document.createElement("option");
         opt.value = modelo.codigo;
         opt.textContent = modelo.codigo;
         modeloSelect.appendChild(opt);
       });
 
-      document.getElementById('modeloSelect').disabled = false;
+      document.getElementById("modeloSelect").disabled = false;
       img.src = serie.imagen;
-      document.getElementById('diametroSelect').disabled = true;
+      descripcion.textContent = serie.descripcion || "";
+      document.getElementById("diametroSelect").disabled = true;
     }
 
     function actualizarDiametros() {
-      const serieNombre = document.getElementById('serieSelect').value;
-      const modeloCodigo = document.getElementById('modeloSelect').value;
+      const serieNombre = document.getElementById("serieSelect").value;
+      const modeloCodigo = document.getElementById("modeloSelect").value;
       const serie = data.series.find(s => s.nombre === serieNombre);
       const modelo = serie.modelos.find(m => m.codigo === modeloCodigo);
-      const diametroSelect = document.getElementById('diametroSelect');
-      const rpmSelect = document.getElementById('rpmSelect');
-      diametroSelect.innerHTML = '<option value="">Seleccione Diámetro</option>';
+      const diametroSelect = document.getElementById("diametroSelect");
+      const rpmSelect = document.getElementById("rpmSelect");
 
+      diametroSelect.innerHTML = '<option value="">Seleccione Diámetro</option>';
       rpmSelect.style.display = "none";
 
       let modeloActivo = modelo;
       if (modelo.rpm && !Array.isArray(modelo.rpm)) {
         rpmSelect.style.display = "inline-block";
-        const rpmSeleccionada = rpmSelect.value || "2900";
+        const rpmDisponible = Object.keys(modelo.rpm);
+        rpmSelect.innerHTML = rpmDisponible.map(v => `<option value="${v}">${v} RPM</option>`).join("");
+        const rpmSeleccionada = rpmDisponible.includes("2900") ? "2900" : rpmDisponible[0];
+        rpmSelect.value = rpmSeleccionada;
         modeloActivo = modelo.rpm[rpmSeleccionada];
       }
 
-      if (!modeloActivo.diametros) return;
+      if (!modeloActivo.diametros) {
+        mostrarMensaje("No hay curvas disponibles para este modelo.");
+        return;
+      }
 
       modeloActivo.diametros.forEach(d => {
-        const opt = document.createElement('option');
+        const opt = document.createElement("option");
         opt.value = d.mm;
         opt.textContent = d.mm + " mm";
         diametroSelect.appendChild(opt);
       });
 
-      document.getElementById('diametroSelect').disabled = false;
+      document.getElementById("diametroSelect").disabled = false;
     }
 
     function actualizarGraficos() {
-      const serieNombre = document.getElementById('serieSelect').value;
-      const modeloCodigo = document.getElementById('modeloSelect').value;
+      const serieNombre = document.getElementById("serieSelect").value;
+      const modeloCodigo = document.getElementById("modeloSelect").value;
       const serie = data.series.find(s => s.nombre === serieNombre);
       const modelo = serie.modelos.find(m => m.codigo === modeloCodigo);
-      const rpmSelect = document.getElementById('rpmSelect');
+      const rpmSelect = document.getElementById("rpmSelect");
       const rpm = modelo.rpm ? rpmSelect.value : modelo.rpm;
       let modeloActivo = modelo.rpm && !Array.isArray(modelo.rpm) ? modelo.rpm[rpm] : modelo;
 
-      const diametros = modeloActivo.diametros;
-      const npsh = modeloActivo.npsh;
-      const eficiencia = modeloActivo.eficiencia || [70, 75, 80, 78, 74];
+      if (!modeloActivo || !modeloActivo.diametros) {
+        mostrarMensaje("No hay curvas disponibles para esta configuración.");
+        limpiarGraficos();
+        return;
+      }
 
       const colores = [
-        'rgba(255, 99, 132, 1)',
+        'rgba(53, 178, 118, 1)',
         'rgba(54, 162, 235, 1)',
-        'rgba(255, 206, 86, 1)',
-        'rgba(75, 192, 192, 1)',
+        'rgba(255, 159, 64, 1)',
+        'rgba(255, 99, 132, 1)',
         'rgba(153, 102, 255, 1)'
       ];
 
-      const datasetsAltura = diametros.map((d, i) => ({
+      const datasetsAltura = modeloActivo.diametros.map((d, i) => ({
         label: `Ø ${d.mm} mm`,
         data: d.curvas.caudal_lmin.map((c, j) => ({ x: c, y: d.curvas.altura_m[j] })),
         borderColor: colores[i % colores.length],
@@ -210,7 +270,7 @@
         tension: 0.4
       }));
 
-      const datasetsPotencia = diametros.map((d, i) => ({
+      const datasetsPotencia = modeloActivo.diametros.map((d, i) => ({
         label: `Ø ${d.mm} mm`,
         data: d.curvas.caudal_lmin.map((c, j) => ({ x: c, y: d.curvas.potencia_hp[j] })),
         borderColor: colores[i % colores.length],
@@ -220,52 +280,63 @@
 
       const datasetNPSH = [{
         label: 'NPSH (m)',
-        data: npsh.caudal_lmin.map((c, i) => ({ x: c, y: npsh.npsh_m[i] })),
-        borderColor: 'rgba(255, 159, 64, 1)',
+        data: modeloActivo.npsh.caudal_lmin.map((c, i) => ({ x: c, y: modeloActivo.npsh.npsh_m[i] })),
+        borderColor: 'rgba(255, 206, 86, 1)',
         fill: false,
         tension: 0.4
       }];
 
       const datasetEficiencia = [{
         label: 'Eficiencia (%)',
-        data: diametros[0].curvas.caudal_lmin.map((c, i) => ({ x: c, y: eficiencia[i] })),
+        data: modeloActivo.diametros[0].curvas.caudal_lmin.map((c, i) => ({ x: c, y: (modeloActivo.eficiencia || [70, 75, 80, 78, 74])[i] })),
         borderColor: 'rgba(0, 128, 0, 1)',
         fill: false,
         tension: 0.4
       }];
 
-      renderChart('graficoAltura', 'Altura (m)', 'Caudal (L/min)', datasetsAltura);
-      renderChart('graficoPotencia', 'Potencia (HP)', 'Caudal (L/min)', datasetsPotencia);
-      renderChart('graficoNPSH', 'NPSH (m)', 'Caudal (L/min)', datasetNPSH);
-      renderChart('graficoEficiencia', 'Eficiencia (%)', 'Caudal (L/min)', datasetEficiencia);
+      renderChart("graficoAltura", "Altura (m)", "Caudal (L/min)", datasetsAltura);
+      renderChart("graficoPotencia", "Potencia (HP)", "Caudal (L/min)", datasetsPotencia);
+      renderChart("graficoNPSH", "NPSH (m)", "Caudal (L/min)", datasetNPSH);
+      renderChart("graficoEficiencia", "Eficiencia (%)", "Caudal (L/min)", datasetEficiencia);
     }
 
     function renderChart(canvasId, labelY, labelX, datasets) {
-      const ctx = document.getElementById(canvasId).getContext('2d');
-      if (window[canvasId]) window[canvasId].destroy();
+      const ctx = document.getElementById(canvasId).getContext("2d");
+      if (charts[canvasId]) charts[canvasId].destroy();
 
-      window[canvasId] = new Chart(ctx, {
-        type: 'line',
+      charts[canvasId] = new Chart(ctx, {
+        type: "line",
         data: { datasets },
         options: {
           responsive: true,
+          maintainAspectRatio: false,
           scales: {
             x: { title: { display: true, text: labelX } },
             y: { title: { display: true, text: labelY } }
           },
           plugins: {
-            legend: { position: 'top' },
-            tooltip: { mode: 'index', intersect: false }
-          }
+            legend: { position: "top" },
+            tooltip: { mode: "index", intersect: false }
+          },
+          animation: { duration: 800, easing: "easeInOutQuad" }
         }
       });
+    }
+
+    function limpiarGraficos() {
+      Object.values(charts).forEach(ch => ch.destroy());
+      charts = {};
+    }
+
+    function mostrarMensaje(msg) {
+      alert(msg);
     }
 
     window.onload = cargarDatos;
   </script>
   <footer>
-    © 2025 MSbombas.cl — Ingeniería en Bombeo y Soluciones Hidráulicas<br>
-    Diseñado para ofrecer información técnica precisa sobre modelos, curvas y rendimientos.
+    © 2025 MSbombas.cl – Todos los derechos reservados <br>
+    Ingeniería en Bombeo y Soluciones Hidráulicas
   </footer>
 </body>
 </html>
